--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(images/dxcservice.png);
+	background-image: url("images/dxcservice.png");
 	background-size: cover;
 	background-position: top center;
 	position: relative;
