--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-        background-image: url(https://raw.githubusercontent.com/troyaaron03/DXC-Tech/main/dxcservice.jpg);
+        background-image: url("dxcservice.jpg");
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -701,7 +701,7 @@ p {
 	}
 
 	#login {
-		background-image: url(file:///C:/Users/Troy/Documents/DXC/dxcservice.png);
+		background-image: url("dxcservice.jpg");
 		background-size: cover;
 		background-position: top center;
 		position: relative;
@@ -719,7 +719,7 @@ p {
 			align-items: center;
 			min-height: 100vh;
 			width: 100%;
-			background: url("background.jpg") no-repeat;
+			background: url("dxcservice.jpg") no-repeat;
 			background-position: center;
 			background-size: cover;
 		}
